--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=change_me_to_a_random_32_char_string
 ###< symfony/framework-bundle ###
 
 ###> symfony/routing ###
